# llm-wiki-harvest

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-auth-and-project-discovery/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/phases/02-conversation-export/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-files-knowledge-and-index/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-VERIFICATION.md
.planning/phases/04-incremental-delta-export-mode/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-REVIEW.md  04-VERIFICATION.md
.planning/phases/05-fireflies-api-transcript-import/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/claude_dump/: cli.py  client.py  config.py  exporter.py  fireflies_client.py  fireflies_config.py  fireflies_exporter.py  fireflies_markdown.py  fireflies_models.py  manifest.py  markdown.py  models.py
tests/: test_client.py  test_e2e_incremental.py  test_exporter_incremental.py  test_fireflies_client.py  test_fireflies_exporter.py  test_fireflies_markdown.py  test_fireflies_models.py  test_manifest.py  test_markdown.py  test_models.py
